--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/hiweb-io/hiweb-app-common#readme",
   "dependencies": {
+    "@mikro-orm/core": "^4.0.4",
     "@types/node": "^14.11.1",
     "nodemon": "^2.0.4",
     "ts-node": "^9.0.0",
